# school-management

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  requirements.txt  school-management-project.code-workspace
platform_school/: asgi.py  settings.py  urls.py  wsgi.py
source/: about.rst  conf.py  features.rst  index.rst
