[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.poetry]
name = "school-management-project"
version = "0.1.0"
description = ""
authors = ["Madhur Jain <madhur.jain.uk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alabaster = "1.0.0"
asgiref = "3.8.1"
babel = "2.16.0"
certifi = "2024.12.14"
cfgv = "3.4.0"
charset-normalizer = "3.4.0"
distlib = "0.3.9"
django = "5.1.4"
django-rest-framework = "0.1.0"
djangorestframework = "3.15.2"
docutils = "0.21.2"
filelock = "3.16.1"
identify = "2.6.3"
idna = "3.10"
imagesize = "1.4.1"
jinja2 = "3.1.5"
markupsafe = "3.0.2"
nodeenv = "1.9.1"
packaging = "24.2"
platformdirs = "4.3.6"
pre-commit = "4.0.1"
pygments = "2.18.0"
pyyaml = "6.0.2"
requests = "2.32.3"
snowballstemmer = "2.2.0"
sphinx = "8.1.3"
sphinxcontrib-applehelp = "2.0.0"
sphinxcontrib-devhelp = "2.0.0"
sphinxcontrib-htmlhelp = "2.1.0"
sphinxcontrib-jsmath = "1.0.1"
sphinxcontrib-qthelp = "2.0.0"
sphinxcontrib-serializinghtml = "2.0.0"
sqlparse = "0.5.3"
urllib3 = "2.3.0"
virtualenv = "20.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
